# AIstreamAssistant

./: AIstreamAssistant.pro  CMakeLists.txt  addtype.cpp  addtype.h  addtype.ui  httphandler.cpp  httphandler.h  initconfig.cpp  initconfig.h  initconfig.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablewidget.cpp  tablewidget.h  videoimport.cpp  videoimport.h  videoimport.ui
